# debut-engine

./: .gitignore  .gitmodules  .gitmodules.bak  .~lock.journal.odt#  C# notes.odt  CMakeLists.txt  Debut.sln  Debut.sln.bak  README.md  genproj.bat  imgui.ini  journal.odt  premake5.lua
Debut/: Application.cpp  Application.h  AssetMap.yaml  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bak  Debut.vcxproj  Debut.vcxproj.filters  cmake_install.cmake
Debut/Debut.dir/Debug/Debut.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  Debut.lastbuildstate
Debut/assets/shaders/: temp.glsl  texture.glsl
Debut/src/: Debut.h  Test.cpp  Test.h
Debut/src/Debut/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Window.h  dbtpch.cpp  dbtpch.h
Debut/src/Debut/AssetManager/: Asset.h  AssetCache.h  AssetManager.cpp  AssetManager.h  ModelImporter.cpp  ModelImporter.h
Debut/src/Debut/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  Instrumentor.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Time.h  UUID.cpp  UUID.h  Window.h
Debut/src/Debut/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Debut/src/Debut/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h  ImGuiUtils.cpp  ImGuiUtils.h  ProgressPanel.cpp  ProgressPanel.h
Debut/src/Debut/Math/: Math.cpp  Math.h
Debut/src/Debut/Physics/: PhysicsMaterial2D.cpp  PhysicsMaterial2D.h  PhysicsMaterial3D.cpp  PhysicsMaterial3D.h  PhysicsSystem3D.cpp  PhysicsSystem3D.h
Debut/src/Debut/Renderer/: Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  FrameBuffer.cpp  FrameBuffer.h  OrthographicCamera.cpp  OrthographicCamera.h  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.h  Shader.cpp  Shader.h  SubTexture2D.cpp  SubTexture2D.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Debut/src/Debut/Rendering/: Camera.h  GraphicsContext.h  Material.cpp  Material.h  RenderTexture.cpp  RenderTexture.h  Shader.cpp  Shader.h  SubTexture2D.cpp  SubTexture2D.h  Texture.cpp  Texture.h
Debut/src/Debut/Rendering/Renderer/: RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  RendererAPI.cpp  RendererAPI.h  RendererDebug.cpp  RendererDebug.h
Debut/src/Debut/Rendering/Resources/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  PostProcessing.cpp  PostProcessing.h  Skybox.cpp  Skybox.h
Debut/src/Debut/Rendering/Structures/: Buffer.cpp  Buffer.h  FrameBuffer.cpp  FrameBuffer.h  Frustum.cpp  Frustum.h  ShadowMap.cpp  ShadowMap.h  VertexArray.cpp  VertexArray.h
Debut/src/Debut/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
Debut/src/Debut/Scripting/: ScriptClass.cpp  ScriptClass.h  ScriptEngine.cpp  ScriptEngine.h  ScriptGlue.cpp  ScriptGlue.h  ScriptInstance.cpp  ScriptInstance.h  ScriptMetadata.cpp  ScriptMetadata.h
Debut/src/Debut/Utils/: AssetCache.h  CppUtils.h  MathUtils.h  PlatformUtils.h  TransformationUtils.h  Utils.cpp  YamlUtils.h
Debut/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLError.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLRenderTexture.cpp  OpenGLRenderTexture.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLSkybox.cpp  OpenGLSkybox.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Debut/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
Debut/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
Debut/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.write.1.tlog
Debut/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
Debut/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
DebutScripting/: CMakeLists.txt
DebutScripting/Core/: Core.cs
DebutScripting/Core/DataStructures/: Vector2.cs
DebutScripting/Core/Input/: Input.cs  KeyCode.cs
DebutScripting/Core/Scene/Components/: Component.cs  Transform.cs
DebutScripting/Source/: Core.cs  Test.cs
DebutScripting/Source/DataStructures/: Vector3.cs
DebutScripting/Source/Input/: Input.cs  KeyCode.cs
DebutScripting/Source/Scene/: Entity.cs
DebutScripting/Source/Scene/Components/: Transform.cs
Debutant/: CMakeLists.txt  CMakeLists.txt.bak  DebutProfile-Runtime.json  DebutProfile-Shutdown.json  DebutProfile-Startup.json  Debutant.vcxproj  Debutant.vcxproj.filters  IconCredits.txt  IconCredits.txt.bak  imgui.ini
Debutant/Debut/: AssetMap.yaml
Debutant/assets/: NewPhysicsMaterial2D-copy.physmat2d
Debutant/assets/materials/: NewMaterial.mat
Debutant/assets/scenes/: 3d.debut  NewPhysics.debut  penguin.debut  physics.debut  physics.debut.bak  scene0.debut  scene1  scene1.debut  scene2  scene2.debut  scene3.debut  textures.debut
Debutant/assets/shaders/: texture.glsl  unlit.glsl
Debutant/assets/shaders/Temp/: texture2.glsl
Debutant/src/: DebutantApp.cpp  DebutantApp.h  DebutantLayer.cpp  DebutantLayer.h
Debutant/src/Camera/: EditorCamera.cpp  EditorCamera.h
Debutant/src/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  InspectorPanel.cpp  InspectorPanel.h  ProgressPanel.cpp  ProgressPanel.h  PropertiesPanel.cpp  PropertiesPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  ViewportPanel.cpp  ViewportPanel.h
Debutant/src/Scene/: SceneManager.cpp  SceneManager.h
Debutant/src/Utils/: EditorCache.cpp  EditorCache.h
Debutant/src/Widgets/: Gizmos.cpp  Gizmos.h
Game/: CMakeLists.txt
Game/Source/: Test.cs
Sandbox/: DebutProfile-Runtime.json  DebutProfile-Shutdown.json  DebutProfile-Startup.json  Sandbox.vcxproj  Sandbox.vcxproj.bak  Sandbox.vcxproj.filters  imgui.ini
scripts/: Win-GenGameMSVC22.bat  Win-GenMSVC17.bat  (+4 more)
(+283 files in other folders)
